--- a/vezeeta.Net/Views/Admin/login.cshtml
+++ b/vezeeta.Net/Views/Admin/login.cshtml
@@ -5,7 +5,7 @@
     Layout = "_Layout1";
 
 }
-
+<h1>Login Page</h1>
 <form asp-controller="Admin" asp-action="login" method="post">
 
     <div>
@@ -18,6 +18,7 @@
         <label asp-for="PasswordHash"></label>
         <input asp-for="PasswordHash" >
     </div>
+
 
     <button type="submit">Login</button>
 
