--- a/vezeeta.Net/Views/Patient/Index.cshtml
+++ b/vezeeta.Net/Views/Patient/Index.cshtml
@@ -1,5 +1,9 @@
-﻿@using vezeeta.Net.Models.ViewModel.Admin
-@model IEnumerable<AdminViewModel>;
+﻿@*
+    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+*@
+@{
+}
+<h1>This is the Home page of Patients</h1>
 
 @{
     Layout = "_Layout1";
@@ -19,11 +23,8 @@
             <th>Email</th>
             <th>Specialization</th>
             <th>Phone Number</th>
-             @{if(ViewBag.isAdmin=="Doctors")
-                 {
-                     <th>Action</th>
-                 }
-              }
+             <th>Action</th>
+               
         </tr>
     </thead>
    <tbody>
@@ -38,24 +39,12 @@
                 <td>@eachModel.specialization</td>
                 <td>@eachModel.PhoneNumber</td>
                 <th>
-                 @{if(ViewBag.GetAll=="Doctors")
-                 {
-
-                <br />
-                    <form asp-controller="Admin" asp-action="EditDoctor" method="post">
-                    <input type="hidden" name="Id" value=@eachModel.Id />
-                    <button type="submit">Edit</button>
-
-                </form>
 
                 <form asp-controller="Admin" asp-action="DeleteDoctor" method="post">
                     <input type="hidden" name="Id" value=@eachModel.Id />
-                    <button type="submit">Delete</button>
+                    <button type="submit">Book</button>
 
                 </form>
-                <br />
-                 }
-                }
 
                  </th>
 
