--- a/vezeeta.Net/Views/Admin/index.cshtml
+++ b/vezeeta.Net/Views/Admin/index.cshtml
@@ -1,13 +1,16 @@
-﻿@{
+﻿
+@{
     Layout = "_Layout1";
 }
 @model Microsoft.AspNetCore.Identity.IdentityUser
+
+<h1>Admin Home Page</h1>
 @{
     if(Model!=null)
     {  
-        <h1>Admin Home Page</h1>
-
         <p> Hello , @Model.UserName </p><br />
+        <a asp-asp-controller="admin" asp-action="logout">Logout</a>
+        <br />
         <p> Dashboard methods</p>
         
 
