--- a/vezeeta.Net/Views/Admin/addCoupon.cshtml
+++ b/vezeeta.Net/Views/Admin/addCoupon.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Data
+@{
     Layout = "_Layout1";
 
 }
@@ -23,13 +24,11 @@
 
     <div>
         <label asp-for="DiscountType"></label>
-
-        <select asp-for="DiscountType">
-                 
-            <option value=0>Percentage</option>
-            <option value=1 >Value</option>
-
+        <select asp-for="DiscountType" asp-items="Html.GetEnumSelectList<DiscountType>()">
+          
         </select>
+
+        
 
     <br />
     <br>
