--- a/vezeeta.Net/Views/Doctor/addAppointment.cshtml
+++ b/vezeeta.Net/Views/Doctor/addAppointment.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Data
+@{
     Layout = "_Layout1";
 
 }
@@ -9,45 +10,29 @@
 
 <form asp-controller="Doctor" asp-action="AddAppointment" method="post">
 
-
- 
     <div>
-        <label asp-for="Days"></label>
-         <select asp-for="Days">
-                 
-            <option value=0>Saturday</option>
-            <option value=1 >Sunday</option>
-            <option value=2>Monday</option>
-            <option value=3 >Tuesday</option>
-            <option value=4>Wednesday</option>
-            <option value=5 >Thursday</option>
-            <option value=6>Friday</option>
-
-
-        </select>
-      
-    </div><br />
-
-    <div>
-        <label asp-for="From"></label>
-        <input type="time" name="From">
-    </div><br />
-
-
-    <div>
-        <label asp-for="To"></label>
-        <input type="time" name="To">
-
-    <br />
-     <div>
         <label asp-for="Price"></label>
-         <input asp-for="Price" />
-         </div>
-    <br />
-    <br>
-
-    <button type="submit">Add</button>
-
+        <input asp-for="Price" />
+    </div><br />
+    <button type="submit">Save</button>
+</form>
+<br />
 
 
+<form asp-controller="Doctor" asp-action="AddDayTime" method="post">
+    <div>
+        <label asp-for="WeekDay"></label>
+        <select asp-for="WeekDay" asp-items="Html.GetEnumSelectList<Days>()">
+            <option value="">Select a day</option>
+        </select>
+
+        <label asp-for="From"></label>
+        <input type="time" asp-for="From" name="From">
+        <label asp-for="To"></label>
+        <input type="time" asp-for="To" name="To">
+
+        <button type="submit">Add</button>
+        <button type="submit">Edit</button>
+        <button type="submit">Delete</button>
+    </div>
 </form>
