--- a/vezeeta.Net/Views/Admin/getAll.cshtml
+++ b/vezeeta.Net/Views/Admin/getAll.cshtml
@@ -7,6 +7,7 @@
 
 }
 
+
 <h1>Get All @ViewBag.GetAll Page</h1>
 
 <table>
@@ -42,6 +43,8 @@
                  {
 
                 <br />
+
+
                     <form asp-controller="Admin" asp-action="EditDoctor" method="post">
                     <input type="hidden" name="Id" value=@eachModel.Id />
                     <button type="submit">Edit</button>
@@ -70,12 +73,11 @@
 </table>
 
 @{
-    for(int x=1;x<=10;x++)
+    @for (int x = 1; x <= 10; x++)
     {
-         <form asp-controller="Admin" asp-action="GetAllDoctors" method="get">
-         <input type="hidden" name="pageNumber" value=@x />
-
-         <button type="submit">@x</button>
+        <form asp-controller="Admin" asp-action="GetAllDoctors" method="get" style="display: inline-block;margin-right: 5px;">
+            <input type="hidden" name="pageNumber" value="@x" />
+            <button type="submit">@x</button>
         </form>
     }
 }
