--- a/vezeeta.Net/Views/Admin/index.cshtml
+++ b/vezeeta.Net/Views/Admin/index.cshtml
@@ -9,9 +9,10 @@
         {
         <p> Hello ,@User.Identity.Name </p>
             <br />
-            <a asp-asp-controller="admin" asp-action="logout">Logout</a>
+            <a asp-asp-controller="admin" asp-action="logout">Logout</a><br />
             <br />
-            <p> Dashboard methods</p>
+        <a asp-controller="Admin" asp-action="Dashboard">Dashboard methods</a><br />
+
 
 
             <a asp-controller="Admin" asp-action="GetAllDoctors">Get All Doctors</a>
