Add Book table handled it's relationships with other tables a patient can add a booking a patient can view all his bokkings

--- a/vezeeta.Net/Views/Admin/addCoupon.cshtml
+++ b/vezeeta.Net/Views/Admin/addCoupon.cshtml
@@ -21,6 +21,11 @@
         <input asp-for="NumOfRequests" />
     </div><br />
 
+    <div>
+        <label asp-for="Number"></label>
+        <input asp-for="Number" />
+    </div><br />
+
 
     <div>
         <label asp-for="DiscountType"></label>
