--- a/vezeeta.Net/Views/Patient/Index.cshtml
+++ b/vezeeta.Net/Views/Patient/Index.cshtml
@@ -5,4 +5,4 @@
 
 <h1>Patient Home Page</h1>
 <a asp-controller="Patient" asp-action="GetAllDoctors"> Search On Doctors</a><br />
-<a asp-controller="Patient" asp-action=""> Get All His/Her Bookings</a>
+<a asp-controller="Patient" asp-action="GetAllBooking"> Get All His/Her Bookings</a>
