Doctor can confirm checkup

--- a/vezeeta.Net/Views/Admin/addCoupon.cshtml
+++ b/vezeeta.Net/Views/Admin/addCoupon.cshtml
@@ -32,7 +32,7 @@
         <select asp-for="DiscountType" asp-items="Html.GetEnumSelectList<DiscountType>()">
           
         </select>
-
+        </div>
         
 
     <br />
