--- a/vezeeta.Net/Views/Admin/addDoctor.cshtml
+++ b/vezeeta.Net/Views/Admin/addDoctor.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Data
+@{
     Layout = "_Layout1";
 
 }
@@ -41,10 +42,13 @@
         <input asp-for="specialization" />
     </div><br />
 
-    <div>
+
+        <div>
         <label asp-for="Gendre"></label>
-        <input asp-for="Gendre" />
-    </div><br />
+        <select asp-for="Gendre" asp-items="Html.GetEnumSelectList<Gendre>()">
+          
+        </select>
+
 
     <div>
         <label asp-for="DateOfBirth"></label>
