--- a/vezeeta.Net/Views/Doctor/index.cshtml
+++ b/vezeeta.Net/Views/Doctor/index.cshtml
@@ -8,4 +8,4 @@
 <a asp-controller="doctor" asp-action="settings">Settings</a><br />
 
 
-<a asp-controller="doctor" asp-action="">Get All Bookings</a><br />
+<a asp-controller="doctor" asp-action="GetAll">Get All Bookings</a><br />
