--- a/vezeeta.Net/Views/Patient/register.cshtml
+++ b/vezeeta.Net/Views/Patient/register.cshtml
@@ -1,4 +1,5 @@
-﻿@{
+﻿@using Data
+@{
     Layout = "_Layout1";
 
 }
@@ -42,7 +43,8 @@
 
     <div>
         <label asp-for="Gendre"></label>
-        <input asp-for="Gendre" />
+        <select asp-for="Gendre" asp-items="Html.GetEnumSelectList<Gendre>()">
+        </select>
     </div><br />
 
     <div>
