--- a/vezeeta.Net/Views/Patient/GetAllBooking.cshtml
+++ b/vezeeta.Net/Views/Patient/GetAllBooking.cshtml
@@ -50,8 +50,8 @@
                 <td>@eachModel.Request</td>
                 <td>
                     <form asp-controller="Patient" asp-action="Cancel" method="post">
-@*                         <input type="hidden" name="appointmentId" value=@eachModel.DoctorAppointment.Id />
- *@                        <button type="submit">Cancel</button>
+                        <input type="hidden" name="bookId" value=@eachModel.Id />
+                        <button type="submit">Cancel</button>
 
                     </form>
                     
