upload image for both doctors and patients and they can be viewd at the admin can ve viwed on dr search aslo can be viewed when checking for all patient bookings

--- a/vezeeta.Net/Views/Admin/getAll.cshtml
+++ b/vezeeta.Net/Views/Admin/getAll.cshtml
@@ -42,7 +42,19 @@
         {
             string fullName = @eachModel.FirstName + " " + @eachModel.LastName;
             <tr>
-                <td>@eachModel.Image</td>
+                
+                @if (ViewBag.GetAll == "Doctors")
+                {
+                    <td>  <img src="~/doctorImages/@eachModel.ImageFileName" width="50" asp-append-version="true"> </img></td>
+
+                }
+                else
+                {
+                    <td>  <img src="~/patientImages/@eachModel.ImageFileName" width="50" asp-append-version="true"> </img></td>
+
+                }
+
+
 
                 <td>@fullName</td>
                 <td>@eachModel.Email</td>
