--- a/vezeeta.Net/Views/Patient/register.cshtml
+++ b/vezeeta.Net/Views/Patient/register.cshtml
@@ -3,14 +3,14 @@
     Layout = "_Layout1";
 
 }
-@model vezeeta.Net.Models.ViewModel.Admin.PatientViewModel;
+@model vezeeta.Net.Models.ViewModel.Admin.AdminViewModel;
 
 
 <h1>This is the Register Page</h1>
 
 
 
-<form asp-controller="Patient" asp-action="Register" method="post">
+<form asp-controller="Patient" asp-action="Register" method="post" enctype="multipart/form-data">
 
 
  
