--- a/vezeeta.Net/Views/Admin/addDoctor.cshtml
+++ b/vezeeta.Net/Views/Admin/addDoctor.cshtml
@@ -7,7 +7,7 @@
 
 
 
-<form asp-controller="Admin" asp-action="AddDoctor" method="post">
+<form asp-controller="Admin" asp-action="AddDoctor" method="post" enctype="multipart/form-data" >
 
 
  
