--- a/vezeeta.Net/Views/Patient/GetAllDoctors.cshtml
+++ b/vezeeta.Net/Views/Patient/GetAllDoctors.cshtml
@@ -28,54 +28,57 @@
         </tr>
     </thead>
     <tbody>
+        
         @foreach (var eachModel in Model)
         {
+            if(eachModel.DoctorAppointmentId!=null)
+            {
+                string fullName = eachModel.FirstName + " " + eachModel.LastName;
+                DateTime currentDate = DateTime.Now;
+                int age = currentDate.Year - eachModel.DateOfBirth.Year;
+
+                <tr>
+                                    <td>  <img src="~/doctorImages/@eachModel.Image" width="50" asp-append-version="true"> </img></td>
+           
+                    <td>@fullName</td>
+                    <td>@eachModel.Email</td>
+                    <td>@eachModel.specialization</td>
+
+                    <td>@(eachModel.DoctorAppointment.Price)</td>
+
+                    <td>@age</td>
+                    <td>@eachModel.Gendre</td>
 
 
-            string fullName = eachModel.FirstName + " " + eachModel.LastName;
-            DateTime currentDate = DateTime.Now;
-            int age = currentDate.Year - eachModel.DateOfBirth.Year;
-            
-            <tr>
-                <td>@eachModel.Image</td>
-                <td>@fullName</td>
-                <td>@eachModel.Email</td>
-                <td>@eachModel.specialization</td>
 
-                <td>@(eachModel.DoctorAppointment.Price)</td>
+                    <td>@eachModel.PhoneNumber</td>
+                    <th>
+                        @{
+                            if (ViewBag.GetAll == "Doctors")
+                            {
 
-                <td>@age</td>
-                <td>@eachModel.Gendre</td>
+                                <br />
 
 
+                                <form asp-controller="Patient" asp-action="DoctorSchedule" method="get">
+                                    <input type="hidden" name="appointmentId" value=@eachModel.DoctorAppointment.Id />
+                                    <button type="submit">View</button>
 
-                <td>@eachModel.PhoneNumber</td>
-                <th>
-                    @{
-                        if (ViewBag.GetAll == "Doctors")
-                        {
-
-                            <br />
+                                </form>
 
 
-                            <form asp-controller="Patient" asp-action="DoctorSchedule" method="get">
-                                <input type="hidden" name="appointmentId" value=@eachModel.DoctorAppointment.Id />
-                                <button type="submit">View</button>
-
-                            </form>
-
-                           
-                            <br />
+                                <br />
+                            }
                         }
-                    }
 
-                </th>
-
+                    </th>
 
 
 
 
-            </tr>
+
+                </tr>
+            }
 
         }
     </tbody>
